@@ -14,7 +14,7 @@
       <!--nhibernate.factory-->
       <factory id="nhibernate.factory">
         <settings>
-          <item key="connection.connection_string">#{connectionString}</item>
+          <item key="connection.connection_string" encrypt="true">#{connectionString}</item>
           <item key="connection.provider">NHibernate.Connection.DriverConnectionProvider</item>
           <item key="connection.driver_class">NHibernate.Driver.SqlClientDriver</item>
           <item key="dialect">NHibernate.Dialect.MsSql2008Dialect</item>
