@@ -2,7 +2,8 @@
 <configuration>
   <properties>
     <!--https://rgdsbwlyvx.database.windows.net/-->
-    <connectionString>Data Source=tcp:rgdsbwlyvx.database.windows.net,1433;Initial Catalog=cooper_dev;User ID=codesharp@rgdsbwlyvx;Password=COOPERcooper5323210;</connectionString>
+    <!--<connectionString>Data Source=tcp:rgdsbwlyvx.database.windows.net,1433;Initial Catalog=cooper_dev;User ID=codesharp@rgdsbwlyvx;Password=COOPERcooper5323210;</connectionString>-->
+    <connectionString>RABhAHQAYQAgAFMAbwB1AHIAYwBlAD0AdABjAHAAOgByAGcAZABzAGIAdwBsAHkAdgB4AC4AZABhAHQAYQBiAGEAcwBlAC4AdwBpAG4AZABvAHcAcwAuAG4AZQB0ACwAMQA0ADMAMwA7AEkAbgBpAHQAaQBhAGwAIABDAGEAdABhAGwAbwBnAD0AYwBvAG8AcABlAHIAXwBkAGUAdgA7AFUAcwBlAHIAIABJAEQAPQBjAG8AZABlAHMAaABhAHIAcABAAHIAZwBkAHMAYgB3AGwAeQB2AHgAOwBQAGEAcwBzAHcAbwByAGQAPQBDAE8ATwBQAEUAUgBjAG8AbwBwAGUAcgA1ADMAMgAzADIAMQAwADsA</connectionString>
 
     <key1>abc</key1>
   </properties>
