@@ -4,6 +4,7 @@
     <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor"/>
   </configSections>
   <appSettings>
+    <add key="EnvironmentVersionFlag" value="Debug" />
   </appSettings>
   <castle>
     <include uri="file://application_config/properties.config" />
